# Asurada

./: .gitignore  PROJECT_PROGRESS.md  README.md
asurada-core/: .gitignore  ARCHITECTURE.md  CORE_WORKFLOW_CN.md  PACKET_FIELD_COVERAGE.md  PARSED_FIELDS_AND_MODEL_USAGE_CN.md  PHASE1_ACCEPTANCE.md  PHASE1_CLOSEOUT.md  PHASE2_DEBUG_DASHBOARD_CN.md  PHASE2_MODEL_MATRIX_CN.md  PROJECT_TIMELINE_AND_RISKS_CN.md  README.md  REALTIME_VOICE_AND_MODEL_ARCHITECTURE_CN.md  SESSION_TYPE_CLASSIFICATION.md  STAGE2_MODEL_INPUT_SCHEMA.md  STAGE3_LLM_EXPLAINER_BOUNDARY_CN.md  STAGE3_LLM_SIDECAR_ROUTING_CN.md  STAGE3_VOICE_MODULE_ARCHITECTURE_CN.md  STAGE3_VOICE_MODULE_PLAN_CN.md  STATUS.md  UNRESOLVED_PACKET_FIELDS.md  main.py  pyproject.toml
asurada-core/data/: sample_session.jsonl
asurada-core/doc/: README.md
asurada-core/scripts/: export_phase2_training_data.py  extract_session_samples.py  macos_audio_capture.swift  macos_audio_stream.swift  macos_speech_capture.swift  phase1_regression.py  phase3_alsa_audio_regression.py  phase3_audio_agent_sidecar_playback_regression.py  phase3_audio_regression.py  phase3_companion_mode_regression.py  phase3_doubao_asr_http_backend_regression.py  phase3_doubao_asr_smoke.py  phase3_doubao_chat_backend_regression.py  phase3_doubao_llm_backend_regression.py  phase3_doubao_realtime_asr_recognizer_regression.py  phase3_doubao_streaming_asr_backend_regression.py  phase3_doubao_tts_http_backend_regression.py  phase3_doubao_tts_smoke.py  phase3_fast_intent_regression.py  phase3_llm_boundary_regression.py  phase3_llm_command_backend_regression.py  (+40 more)
(+89 files in other folders)
